--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,91 @@
 
 body {
   margin: 0;
+  font-family: sans-serif;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.page-title {
+  text-align: center;
+  color: #d43184;
+}
+
+.slogan {
+  text-align: center;
+  margin-bottom: 50px;
+  color: #887762;
+}
+
+.content-wrapper {
+  display: flex;
+}
+
+.banner {
+  width: 30%;
+  margin-right: 30px;
+}
+
+.form-wrapper {
+  width: 70%;
+}
+
+.form-item {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  margin-bottom: 16px;
+}
+
+.form-item label {
+  margin-right: 7px;
+  width: 35%;
+  color: #887762;
+}
+
+.form-item small {
+ color: #ef88b7;
+}
+
+.form-item input {
+  flex: 1;
+  padding: 5px 10px;
+  border: 1px solid #ef88b7;
+  border-radius: 4px;
+}
+
+.form-item input:focus-visible {
+  outline: 1px solid #ef88b7;
+}
+
+.form-submit-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 50px;
+}
+
+.form-submit {
+  background-color: #d43184;
+  color: white;
+  font-size: 18px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border: 2px solid transparent;
+}
+
+.form-submit:hover {
+  background-color: white;
+  color: #d43184;
+  border: 2px solid #d43184;
 }
